# MTCOLD

./: .gitignore  README.md
DPP/: CMakeLists.txt
DPP/include/: TestClient.h  core.h
DPP/src/: Pockets.cpp  TestClient.cpp  core.cpp  main.cpp  mainwindow.cpp  sender.cpp
UI/: CMakeLists.txt  Pockets.cpp  core.cpp  errorwindow.cpp  errorwindow.ui  indicator.cpp  indicator.h  indicator.ui  indicatorwidget.ui  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc  restart.cpp  restart.h  restart.ui  sender.cpp  sender.h
UI/UI/: errorwindow.cpp  errorwindow.h  errorwindow.ui  indicator.cpp  indicator.h  indicator.ui  indicatormanager.cpp  indicatormanager.h  indicatormanager.ui  indicatorwidget.cpp  indicatorwidget.h  indicatorwidget.ui  macaddress.cpp  macaddress.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  restart.cpp  restart.h  restart.ui  style.css
UI/core/include/: Pockets.cpp  TestServer.cpp  core.cpp  sender.cpp
UI/core/scr/: Pockets.h  TestServer.h
stage/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  server.cpp
stage/.cmake/api/v1/reply/: cache-v2-76026c9f30e5cb90c38c.json  cmakeFiles-v1-281fc8cd550cb0fcc8fb.json  codemodel-v2-2411c98c380a2433d6e7.json  directory-.-Debug-6b45490a8ba47c47ce71.json  index-2024-04-15T11-55-25-0718.json  target-DPP-Debug-334239ce758c72d5947a.json  target-DPP_autogen-Debug-38deba5c77caa05aaffc.json  target-DPP_autogen_timestamp_deps-Debug-ea275aaa3d02f3ae44ef.json
stage/.qt/: QtDeploySupport.cmake
stage/.qtc_clangd/.cache/clangd/index/: Pockets.cpp.FF805144A07040A9.idx  Pockets.h.556926DA56E625F7.idx  QAbstractButton.C3F74C0274942F49.idx  QApplication.2FFF2FE7AA837FD8.idx  QButtonGroup.2AE5E53ACC1AA885.idx  QByteArray.BC8AA064383B3FCB.idx  QCoreApplication.343BC4F38C8F966A.idx  QCryptographicHash.71BC0DA120C82446.idx  QDialog.2DA879557D8C0054.idx  QFlags.2D59D12872ECE1DC.idx  QFontMetrics.F46C2762267E8280.idx  QGraphicsDropShadowEffect.4FF97945520693E8.idx  QHBoxLayout.6DDEFA3E6B2D8335.idx  QHostAddress.E0CC2AD41D37A021.idx  QIODevice.26AC2458EFFEEDFA.idx  QList.CB565F6CB61C9335.idx  QMainWindow.DB5CE3EA52EB40F0.idx  QMetaType.0440C791330AC1CA.idx  QNetworkAccessManager.651533FE94B28F87.idx  QNetworkRequest.5515401E525D7972.idx  QPropertyAnimation.E38B84F9EE80B395.idx  QSharedDataPointer.1651DFD54A142C31.idx  QSslConfiguration.21021FE48A100764.idx  QSslError.405BE3F4A8B8E441.idx  QSslPreSharedKeyAuthenticator.95E006C1187B03FC.idx  QSslSocket.9AD357D4708EC530.idx  QTimer.1A0A6AA0DD61243B.idx  QUdpSocket.CE749513186651BF.idx  QUrl.A34FC52EDE2C31BF.idx  QVariant.38603176690783B6.idx  QtNetwork.314D3CA15EB9792C.idx  QtNetworkDepends.E6286E6B45230591.idx  TestServer.h.4FBB657691559811.idx  basic_ios.h.5B05F8DA67EC6948.idx  core.cpp.FAA4A51CDF616DE3.idx  core.h.37AAF582F957F737.idx  errorwindow.cpp.94E2904280075C3F.idx  errorwindow.h.11C8FC3A7600E49A.idx  fs_fwd.h.678E91BBE5DFD138.idx  indicator.cpp.6AAE0D61C0EC6E8F.idx  (+121 more)
stage/Core/include/: Packets.h  Pockets.h  TestServer.h  core.h
stage/Core/src/: Packets.cpp  Pockets.cpp  core.cpp
stage/Logger/: logger.cpp  logger.h
stage/Logger/include/: mylogger.hpp
stage/Logger/src/: mylogger.cpp  mymain.cpp
stage/UI/: error_exceeded.html  error_off.html  errorwindow_style.html  indicator_template.html  resources.qrc
stage/UI/UI_Module/: errorwindow.ui  indicator.ui  indicatorwidget.ui  macaddress.ui  mainwindow.ui  restart.ui
stage/UI/include/: connectcore.h  errorwindow.h  indicator.h  indicatormanager.h  indicatorwidget.h  macaddress.h  mainwindow.h  restart.h
stage/UI/src/: connectcore.cpp  errorwindow.cpp  indicator.cpp  indicatormanager.cpp  indicatorwidget.cpp  macaddress.cpp  main.cpp  mainwindow.cpp  restart.cpp
tests/: CMakeLists.txt  CoreTest.cpp
